changed text on message box to reflect what it does

--- a/gravity-ui/gravity-element.html
+++ b/gravity-ui/gravity-element.html
@@ -22,7 +22,7 @@
     <paper-input label="username" value="{{name}}"></paper-input>    
     <paper-input label="message" value="{{text}}"></paper-input>
     <input type="button" value="request token" on-tap="requestToken">
-    <input type="button" value="hi there" on-tap="sendText">
+    <input type="button" value="send message" on-tap="sendText">
     <socket-sync id="sync" items="{{history}}"></socket-sync>
   </template>
 
